# flexbot

./: .clang-tidy  .clangd  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
ESP_serial/: FlexBot.h  FlexBot_Serial.ino  analog.cpp  com.cpp  control.cpp  encoder.cpp  filter.cpp  hall.cpp
data/: analyze_data.py  analyze_timing_data.py
docs/: architecture.md  change-log.md  design-decisions.md  hardware.md  open-issues.md
docs/specs/: showcase-plan.md
serialcomm_c/: CMakeLists.txt  compile.txt  data.txt  serialcomm.cpp
serialcomm_c/include/: config.h
serialcomm_c/src/: main.cpp  serialcomm.cpp  serialib.cpp
serialcomm_c/tools/: analyze_timing_data.py  benchmark.cpp
